# box_track

./: .gitignore  Procfile  ReadMe.md  app.json  app.py  requirements.txt
.github/workflows/: deploy.yml
backend/: models.py  urls.py  views.py
backend/management/commands/: bom_domestic.py  fix_time.py  japan.py  maoyan.py  scrape.py  us_cmp.py  utils.py
backend/migrations/: 0001_initial.py  0002_auto_20200101_1015.py  0003_auto_20200117_1045.py  0004_boxofficemojodomestic.py
box_track/: asgi.py  manage.py  settings.py  settings.py.example  test_get_japan_box.sh  urls.py
box_track/backend/: models.py  urls.py  views.py
box_track/backend/management/commands/: japan.py  scrape.py
box_track/backend/migrations/: 0001_initial.py
box_track/box_track/: settings.py  urls.py  wsgi.py
box_track/frontend/templates/frontend/: box.html
frontend/: urls.py  views.py
frontend/static/javascript/: box.js  toast.js
frontend/templates/frontend/: box.html  modal.html  toast.html  us_cmp.html  us_cmp2.html
imdb_info/templates/: get_box_office.html
static/javascript/: box.js
templates/: get_box_office.html
tracker/: run.sh  run_japan.sh
tracker/tracker/: __main__.py  config.py.example  db.py  japan.py  line_protocol.py  main.py  maoyan.py
tracker_rs/: Cargo.toml
tracker_rs/src/: main.rs  maoyan.rs
tracker_rs/src/maoyan/: api_struct.rs  fetch.rs  report.rs
