[package]
name = "tracker_rs"
version = "0.1.0"
authors = ["Elsa <zeyugao@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde_json = "1.0"
influxdb = { version = "0.3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
